tests/diagnostics/bool_arith.kal
# bool is not numeric: arithmetic on a boolean is a type error.
true + 1;
